tdf#118080 fix formula importing of ppt animation.

Change-Id: I5f56e0d70a13418b0bde45c2fc65f56fdb365263
Reviewed-on: https://gerrit.libreoffice.org/58209
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>